--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build:css": "tailwindcss -i ./css/input.css -o ./css/styles.css",
     "watch:css": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0"
+  },
   "devDependencies": {
     "tailwindcss": "^3.4.0",
     "wrangler": "^3.80.0"
