--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,8 @@
 name = "bible-app"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "."
+
+[[kv_namespaces]]
+binding = "WORDS_KV"
+id = "REPLACE_WITH_PROD_KV_ID"
+preview_id = "REPLACE_WITH_DEV_KV_ID"
