--- a/package.json
+++ b/package.json
@@ -4,18 +4,12 @@
   "type": "module",
   "description": "Vanilla JS migration of Bible App",
   "scripts": {
-    "server": "node server/server.js",
     "dev": "wrangler pages dev . --kv WORDS_KV --compatibility-date=2024-01-01",
     "deploy": "npm run build:css && wrangler pages deploy .",
     "build:css": "tailwindcss -i ./css/input.css -o ./css/styles.css",
     "watch:css": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongodb": "^6.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "tailwindcss": "^3.4.0",
     "wrangler": "^3.80.0"
