--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
   "name": "bible-app-vanilla",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
-  "description": "Vanilla JS migration of Bible App",
+  "description": "Interactive Bible study app with multiple translations and AI analysis",
+  "main": "index.html",
   "scripts": {
     "dev": "wrangler pages dev . --kv WORDS_KV --compatibility-date=2024-01-01",
     "deploy": "npm run build:css && wrangler pages deploy .",
     "build:css": "tailwindcss -i ./css/input.css -o ./css/styles.css",
-    "watch:css": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch"
+    "watch:css": "tailwindcss -i ./css/input.css -o ./css/styles.css --watch",
+    "start": "npx live-server --port=8080",
+    "serve": "node server/server.js",
+    "serve:dev": "nodemon server/server.js"
   },
-  "dependencies": {},
+  "keywords": [
+    "bible",
+    "study",
+    "javascript",
+    "api",
+    "offline",
+    "mobile",
+    "translations"
+  ],
+  "author": "Bible App Team",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
+  },
   "devDependencies": {
     "tailwindcss": "^3.4.0",
-    "wrangler": "^3.80.0"
+    "wrangler": "^3.80.0",
+    "live-server": "^1.2.2",
+    "nodemon": "^3.0.2"
   }
 }
